# de-test

./: .gitignore  README.md  pyproject.toml
src/de_test/: db.py  pandas_load.py  pyarrow_read_bad.py
