[project]
name = "de-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "duckdb (>=1.3.0,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]

[tool.poetry]
packages = [{include = "de_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
